--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Backend for e-commerce portfolio project",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon"
+    "dev": "clear && nodemon",
+    "test": "node",
+    "build": "node"
   },
   "repository": {
     "type": "git",
@@ -19,8 +21,16 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.1"
+    "express-session": "^1.17.3",
+    "graphql": "^16.8.1",
+    "mongoose": "^8.0.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
