--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for e-commerce portfolio project",
   "main": "index.js",
   "scripts": {
-    "dev": "clear && nodemon",
+    "dev": "clear && nodemon src/index.ts",
     "test": "node",
     "build": "node"
   },
@@ -19,6 +19,16 @@
   },
   "homepage": "https://github.com/woragis/e-commerce-backend#readme",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/connect-mongo": "^3.1.3",
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
+    "@types/graphql": "^14.5.0",
+    "@types/mongoose": "^5.11.97",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.14",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
@@ -31,6 +41,7 @@
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.1"
   }
 }
