--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "clear && nodemon src/index.ts",
-    "test": "node",
-    "build": "node"
+    "test": "ts-node src/index.ts",
+    "build": "ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/woragis/e-commerce-backend#readme",
   "dependencies": {
+    "@graphql-tools/merge": "^9.0.1",
     "@types/bcrypt": "^5.0.2",
     "@types/connect-mongo": "^3.1.3",
     "@types/cors": "^2.8.17",
@@ -29,6 +30,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.14",
+    "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
@@ -36,7 +38,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "graphql": "^16.8.1",
-    "mongoose": "^8.0.1",
+    "mongoose": "^8.0.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   },
