--- a/package.json
+++ b/package.json
@@ -19,30 +19,24 @@
   },
   "homepage": "https://github.com/woragis/e-commerce-backend#readme",
   "dependencies": {
-    "@graphql-tools/merge": "^9.0.1",
-    "@types/bcrypt": "^5.0.2",
-    "@types/connect-mongo": "^3.1.3",
-    "@types/cors": "^2.8.17",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.21",
-    "@types/express-session": "^1.17.10",
-    "@types/graphql": "^14.5.0",
-    "@types/mongoose": "^5.11.97",
-    "@types/passport": "^1.0.16",
-    "@types/passport-google-oauth20": "^2.0.14",
-    "apollo-server-express": "^3.13.0",
-    "bcrypt": "^5.1.1",
-    "connect-mongo": "^5.1.0",
+    "@graphql-tools/schema": "^10.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "graphql": "^16.8.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
+    "merge-graphql-schemas": "^1.7.8",
     "mongoose": "^8.0.3",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport": "^0.7.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.21",
+    "@types/express-graphql": "^0.9.0",
+    "@types/graphql": "^14.5.0",
+    "@types/mongoose": "^5.11.97",
+    "@types/passport": "^1.0.16",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.1"
   }
