--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "clear && nodemon src/index.ts",
-    "test": "ts-node src/index.ts",
+    "test": "jest",
     "build": "ts-node src/index.ts"
   },
   "repository": {
@@ -20,23 +20,29 @@
   "homepage": "https://github.com/woragis/e-commerce-backend#readme",
   "dependencies": {
     "@graphql-tools/schema": "^10.0.2",
+    "connect-redis": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
+    "express-session": "^1.17.3",
     "graphql": "^15.8.0",
     "merge-graphql-schemas": "^1.7.8",
     "mongoose": "^8.0.3",
-    "passport": "^0.7.0"
+    "passport": "^0.7.0",
+    "redis": "^4.6.11"
   },
   "devDependencies": {
+    "@types/connect-redis": "^0.0.23",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/express-graphql": "^0.9.0",
+    "@types/express-session": "^1.17.10",
     "@types/graphql": "^14.5.0",
     "@types/mongoose": "^5.11.97",
     "@types/passport": "^1.0.16",
+    "@types/redis": "^4.0.11",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.1"
   }
