--- a/package.json
+++ b/package.json
@@ -40,10 +40,13 @@
     "@types/express-graphql": "^0.9.0",
     "@types/express-session": "^1.17.10",
     "@types/graphql": "^14.5.0",
+    "@types/jest": "^29.5.11",
     "@types/mongoose": "^5.11.97",
     "@types/passport": "^1.0.16",
     "@types/redis": "^4.0.11",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
   }
 }
