--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "types": ["node", "express"],
+    "types": ["node", "express", "jest"],
     "typeRoots": ["./node_modules/@types", "./src/types"],
     "target": "es2016",
     "module": "commonjs",
