Fix environment variables import and typing

--- a/src/config/.env.prod
+++ b/src/config/.env.prod
@@ -1,19 +1,21 @@
-NODE_ENV=production
-PORT=3000
+NODE_ENV='prod'
+PORT=5001
 
-REDIS_PASSWORD=VVJ4TwicsgpYgE6XDUAImZ5nzsogch9w
-REDIS_SOCKET_HOST=redis-11306.c308.sa-east-1-1.ec2.cloud.redislabs.com
+MONGO_DB_URI='mongodb+srv://masteringthecode:woragis2004@cluster0.lvar0nb.mongodb.net/?retryWrites=true&w=majority'
+
+REDIS_PASSWORD='VVJ4TwicsgpYgE6XDUAImZ5nzsogch9w'
+REDIS_SOCKET_HOST='redis-11306.c308.sa-east-1-1.ec2.cloud.redislabs.com'
 REDIS_SOCKET_PORT=11306
 
-SESSION_SECRET=woGiveUpBird
+SESSION_SECRET='woGiveUpBird'
 SESSION_COOKIE_SECURE=false
 SESSION_COOKIE_HTTP_ONLY=true
 SESSION_COOKIE_MAX_AGE=1800000
 
-CORS_ORIGIN=http://localhost:5000,http://woragis.com
-CORS_ALLOWED_HEADERS=Content-Type,Authorization
+CORS_ORIGIN='http://localhost:5000,http://woragis.com'
+CORS_ALLOWED_HEADERS='Content-Type,Authorization'
 CORS_CREDENTIALS=true
-CORS_EXPOSED_HEADERS=Content-Range,X-Content-Range
+CORS_EXPOSED_HEADERS='Content-Range,X-Content-Range'
 CORS_MAX_AGE=600
 CORS_OPTIONS_SUCCESS_STATUS=204
 CORS_PREFLIGHT_CONTINUE=false
