--- a/src/config/.env.test
+++ b/src/config/.env.test
@@ -1,5 +1,5 @@
-NODE_ENV='dev'
-PORT=3000
+NODE_ENV='test'
+PORT=4001
 
 MONGO_DB_URI='mongodb+srv://masteringthecode:woragis2004@cluster0.lvar0nb.mongodb.net/?retryWrites=true&w=majority'
 
