--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Backend for e-commerce portfolio project",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon src/index.ts",
+    "dev": "NODE_ENV=dev nodemon src/index.ts",
     "test": "NODE_ENV=test jest",
-    "build": "NODE_ENV=production ts-node src/index.ts"
+    "build": "NODE_ENV=prod ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
